# TF2-Played-With

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  README-technical.md  README.md  SECURITY.md  run.bat
meta/: convert_steamid.c  steamdb_id_conversion.js  steamid3_to_64.c  steamid64_to_name.c
src/: collection.c  collection.h  common.h  file_io.c  file_io.h  history.c  history.h  interactive.c  interactive.h  main.c  player_info.h  steamid_manip.c  steamid_manip.h  time_manip.h  user_input.c  user_input.h
src/save_formats/: README.md  main.h  master.h  player_record_0.h  version_0.c  version_0.h  version_1.c  version_1.h
